--- a/day-to-dusk-converter/package.json
+++ b/day-to-dusk-converter/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.6.7",
+    "dropzone": "^6.0.0-beta.2",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "replicate": "^0.27.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
